--- a/asset/html/leveltheme.html
+++ b/asset/html/leveltheme.html
@@ -113,21 +113,21 @@
                         title="Niveau 3"></label>
                   </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselLevelControls" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#carouselLevelControls" role="button" data-slide="prev" id="levelLeft">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only" id="levelLeft">Previous</span>
+                  <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="#carouselLevelControls" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#carouselLevelControls" role="button" data-slide="next" id="levelRight">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only" id="levelRight">Next</span>
+                  <span class="sr-only">Next</span>
                 </a>
               </div>
             </div>
             <div class="col-md-6 text-center order-md-6 order-6 col-sublime">
               <ol>
-                <li>Temps pour deviner une liste de mot : <span id="rule1">60/150/200</span> secondes</li>
-                <li>Nombre de mots : <span id="rule2">10/12/15</span></li>
-                <li>Bonus de points pour finir avant le chrono : <span id="rule3">20/30/50</span></li>
+                <li>Temps pour deviner une liste de mot : <span id="rule1">60</span> secondes</li>
+                <li>Nombre de mots : <span id="rule2">10</span></li>
+                <li>Bonus de points pour finir avant le chrono : <span id="rule3">20</span></li>
               </ol>
             </div>
           </div>
@@ -174,7 +174,7 @@
     crossorigin="anonymous"></script>
   <script src="../BootStrap/bootstrap.bundle.min.js"></script>
   <script src="../js/leveltheme.js"></script>
-  <script src="../js/rulestheme.js"></script>
+  <script src="../js/rulesthemelevel.js"></script>
 
 </body>
 
