--- a/asset/html/jeu.html
+++ b/asset/html/jeu.html
@@ -119,15 +119,30 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
-              Post quorum necem nihilo lenius ferociens Gallus ut leo cadaveribus pastus multa huius modi scrutabatur. quae singula narrare non refert, me professione modum, quod evitandum est, excedamus.<br>
-  
-              Quod si rectum statuerimus vel concedere amicis, quidquid velint, vel impetrare ab iis, quidquid velimus, perfecta quidem sapientia si simus, nihil habeat res vitii; sed loquimur de iis amicis qui ante oculos sunt, quos vidimus aut de quibus memoriam accepimus, quos novit vita communis. Ex hoc numero nobis exempla sumenda sunt, et eorum quidem maxime qui ad sapientiam proxime accedunt.<br>
-              
-              Quo cognito Constantius ultra mortalem modum exarsit ac nequo casu idem Gallus de futuris incertus agitare quaedam conducentia saluti suae per itinera conaretur, remoti sunt omnes de industria milites agentes in civitatibus perviis.<br>
+          <div class="modal-body text-center">
+            Données personnelles
+Les informations recueillies à partir de ce formulaire font l’objet d’un traitement informatique destiné à :<br>
+
+Find-us<br><br>
+
+Pour la ou les finalités suivantes :<br>
+
+La conservation de vos données dans le respect des RGPD.<br><br>
+
+Conformément à la loi « informatique et libertés » du 6 janvier 1978 modifiée, vous disposez d’un droit d’accès et de rectification aux informations qui vous concernent.<br>
+
+Vous pouvez accèder aux informations vous concernant en vous adressant à : find-us@compleo.fr<br>
+Vous pouvez également, pour des motifs légitimes, vous opposer au traitement des données vous concernant.<br><br>
+
+Notre société :<br>
+
+Find-us<br><br>
+
+Contact : administration@find-us.fr<br>
+
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
           </div>
         </div>
       </div>
