--- a/asset/html/leveltheme.html
+++ b/asset/html/leveltheme.html
@@ -161,6 +161,44 @@
       </div>
     </div>
   </footer>
+
+  <div class="modal fade" id="MentionsModale" tabindex="-1" role="dialog" aria-labelledby="MentionsModaleLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header bg-dark text-white">
+          <h5 class="modal-title" id="MentionsModaleLabel">Mentions legales</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body text-center">
+          Données personnelles
+Les informations recueillies à partir de ce formulaire font l’objet d’un traitement informatique destiné à :<br>
+
+Find-us<br><br>
+
+Pour la ou les finalités suivantes :<br>
+
+La conservation de vos données dans le respect des RGPD.<br><br>
+
+Conformément à la loi « informatique et libertés » du 6 janvier 1978 modifiée, vous disposez d’un droit d’accès et de rectification aux informations qui vous concernent.<br>
+
+Vous pouvez accèder aux informations vous concernant en vous adressant à : find-us@compleo.fr<br>
+Vous pouvez également, pour des motifs légitimes, vous opposer au traitement des données vous concernant.<br><br>
+
+Notre société :<br>
+
+Find-us<br><br>
+
+Contact : administration@find-us.fr<br>
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+        </div>
+      </div>
+    </div>
+  </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
