--- a/index.html
+++ b/index.html
@@ -55,30 +55,34 @@
 
                         <!--Actus -->
                         <div class="card actus" style="">
-                            <img class="card-img-top" src="https://picsum.photos/id/237/500/300" alt="Card image cap">
+                            <img class="card-img-top" src="https://i.kym-cdn.com/entries/icons/facebook/000/026/152/gigachad.jpg" alt="Card image cap">
                             <div class="card-body">
-                              <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <p class="card-text text-center">"Avant j'etais comme vous, maintenant, je joue à Find-us". Gigachad s'exprime sur les changement dans sa vie suite à la découverte de find-us. </p>
+                              <a class="text-center" href="asset/html/actus.html">Read more</a>
                             </div>
                         </div>
 
                         <div class="card actus" style="">
-                            <img class="card-img-top" src="https://picsum.photos/id/237/500/300" alt="Card image cap">
+                            <img class="card-img-top" src="https://references.lesoir.be/getasset/c13d0762-4361-4a6c-a0f2-9d79de37a2ab/" alt="Card image cap">
                             <div class="card-body">
-                              <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <p class="card-text text-center">Elon Musk dans Man of the year 2021 "i fucking love this game (find-us)".</p>
+                              <a class="text-center" href="asset/html/actus.html">Read more</a>
                             </div>
                         </div>
 
                         <div class="card actus" style="">
-                            <img class="card-img-top" src="https://picsum.photos/id/237/500/300" alt="Card image cap">
+                            <img class="card-img-top" src="https://global-img.gamergen.com/sardoche-c-tait-sr-meme_0190000000939304.jpg" alt="Card image cap">
                             <div class="card-body">
-                              <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <p class="card-text text-center">Sardoche casse son clavier devant le niveau 3 thème animeaux <br>de Find-us (live).</p>
+                              <a class="text-center" href="asset/html/actus.html">Read more</a>
                             </div>
                         </div>
 
                         <div class="card actus" style="">
-                            <img class="card-img-top" src="https://picsum.photos/id/237/500/300" alt="Card image cap">
+                            <img class="card-img-top" src="https://img.20mn.fr/qJtWwo7ySFSNuyEIINKgDA/310x190_alain-soral-lors-conference-presse-4-juin-2009-paris.jpg" alt="Card image cap">
                             <div class="card-body">
-                              <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <p class="card-text text-center">"Commence par me parler poliment" de Alain Soral à un passant qui dit ne pas aimer Find-us.</p>
+                              <a class="text-center" href="asset/html/actus.html">Read more</a>
                             </div>
                         </div>
 
@@ -117,6 +121,24 @@
                             <p>Update Quare talis improborum consensio non modo excusatione amicitiae tegenda non est sed potius supplicio omni vindicanda est, ut ne quis concessum putet amicum vel bellum patriae inferentem sequi; quod quidem, ut res ire coepit, haud scio an aliquando futurum sit. Mihi autem non minori curae est, qualis res publica post mortem meam futura, quam qualis hodie sit.</p>
                             <hr class="hr-white">
                         </div>
+
+                        <div class="patchnote text-white">
+                          <h3>Patch version 0.8.2</h3>
+                          <p>Update Quare talis improborum consensio non modo excusatione amicitiae tegenda non est sed potius supplicio omni vindicanda est, ut ne quis concessum putet amicum vel bellum patriae inferentem sequi; quod quidem, ut res ire coepit, haud scio an aliquando futurum sit. Mihi autem non minori curae est, qualis res publica post mortem meam futura, quam qualis hodie sit.</p>
+                          <hr class="hr-white">
+                      </div>
+
+                      <div class="patchnote text-white">
+                        <h3>Patch version 0.8.1</h3>
+                        <p>Update Quare talis improborum consensio non modo excusatione amicitiae tegenda non est sed potius supplicio omni vindicanda est, ut ne quis concessum putet amicum vel bellum patriae inferentem sequi; quod quidem, ut res ire coepit, haud scio an aliquando futurum sit. Mihi autem non minori curae est, qualis res publica post mortem meam futura, quam qualis hodie sit.</p>
+                        <hr class="hr-white">
+                    </div>
+
+                    <div class="patchnote text-white">
+                      <h3>Patch version 0.8.0</h3>
+                      <p>Update Quare talis improborum consensio non modo excusatione amicitiae tegenda non est sed potius supplicio omni vindicanda est, ut ne quis concessum putet amicum vel bellum patriae inferentem sequi; quod quidem, ut res ire coepit, haud scio an aliquando futurum sit. Mihi autem non minori curae est, qualis res publica post mortem meam futura, quam qualis hodie sit.</p>
+                      <hr class="hr-white">
+                  </div>
                     </div>
 
                     <div class="col-12 col-lg-3 aside-2">
@@ -160,7 +182,7 @@
                         <span aria-hidden="true">&times;</span>
                       </button>
                     </div>
-                    <div class="modal-body">
+                    <div class="modal-body text-center">
                       Données personnelles
 Les informations recueillies à partir de ce formulaire font l’objet d’un traitement informatique destiné à :<br>
 
