--- a/asset/html/actus.html
+++ b/asset/html/actus.html
@@ -71,7 +71,7 @@
                                                 <img class="card-img-top img-actus" src="https://references.lesoir.be/getasset/c13d0762-4361-4a6c-a0f2-9d79de37a2ab/" alt="Card image cap">
                                                 <div class="card-body">
                                                   <p class="card-text text-center">Elon Musk dans Man of the year 2021 <br>"i fucking love this game (Find-us)".<br>
-                                                Il se serai exprimé dans le journal après avoir perdu pour la 19ème fois le niveau 2 du thème transport.</p>
+                                                Il se serait exprimé dans le journal après avoir perdu pour la 19ème fois le niveau 2 du thème transport.</p>
                                                 
                                             </div>
                                         </div>
@@ -80,7 +80,7 @@
                                             <div class="card actus" style="">
                                                 <img class="card-img-top img-actus" src="https://global-img.gamergen.com/sardoche-c-tait-sr-meme_0190000000939304.jpg" alt="Card image cap">
                                                 <div class="card-body">
-                                                  <p class="card-text text-center">Sardoche casse son clavier devant le niveau 3 thème animeaux <br>de Find-us (live).<br>
+                                                  <p class="card-text text-center">Sardoche casse son clavier devant le niveau 3 thème animals <br>de Find-us (live).<br>
                                                 Le streamer polémique Sardoche, connu pour ses éclats de colère en plein live, détruit son clavier en plein live Find-us.</p>
                                                 
                                             </div>
