--- a/asset/html/admin.html
+++ b/asset/html/admin.html
@@ -61,30 +61,30 @@
                         <div class="col-md-4 col-12 text-center order-md-3 order-7">Liste de mots</div>
                         <div class="col-md-4 col-12 order-md-5 order-2">
                             <ol type="A" id="listTheme">
-                                <li><span class="text-success">Transports<button id="subTheme1" class="btn btn-warning">-</button></li>
-                                <li>Animaux</span><button id="subTheme2" class="btn btn-warning">-</button></li>
-                                <li>Sciences<button id="subTheme3" class="btn btn-warning">-</button></li>
+                                <li class="col-12"><span class="text-success">Transports<button id="subTheme1" class="btn btn-warning float-right">-</button></li>
+                                <li class="col-12">Animaux</span><button id="subTheme2" class="btn btn-warning float-right">-</button></li>
+                                <li class="col-12">Sciences<button id="subTheme3" class="btn btn-warning float-right">-</button></li>
                             </ol>   
                         </div>
                         <div class="col-md-4 col-12 order-md-6 order-5">
                             <ol type="I" id="listLevel">
-                                <li><span class="text-success">Niveau 1</span><button id="subLevel1" class="btn btn-warning">-</button></li>
-                                <li>Niveau 2<button id="subLevel2" class="btn btn-warning">-</button></li>
-                                <li>Niveau 3<button id="subLevel3" class="btn btn-warning">-</button></li>
+                                <li><span class="text-success">Niveau 1</span><button id="subLevel1" class="btn btn-warning float-right">-</button></li>
+                                <li>Niveau 2<button id="subLevel2" class="btn btn-warning float-right">-</button></li>
+                                <li>Niveau 3<button id="subLevel3" class="btn btn-warning float-right">-</button></li>
                             </ol>
                         </div>
                         <div class="col-md-4 col-12 order-md-7 order-8">
                             <ol type="1" id="listWord">
-                                <li>velo;Transport à 2 roues où il faut pédaler<button id="subWord1" class="btn btn-warning">-</button></li>
-                                <li>trottinette;Transport à deux roues où il faut pousser avec le pied<button id="subWord2" class="btn btn-warning">-</button></li>
-                                <li>moto;Transport à deux roues à moteur<button id="subWord3" class="btn btn-warning">-</button></li>
-                                <li>voiture;Transport à 4 roues à moteur<button id="subWord4" class="btn btn-warning">-</button></li>
-                                <li>bus;Transport en commun à 4 roues<button id="subWord5" class="btn btn-warning">-</button></li>
-                                <li>avion;Transport volant<button id="subWord6" class="btn btn-warning">-</button></li>
-                                <li>bateau;Transport marin<button id="subWord7" class="btn btn-warning">-</button></li>
-                                <li>train;Transport ferrovière<button id="subWord8" class="btn btn-warning">-</button></li>
-                                <li>fusee;Transport dans l'espace<button id="subWord9" class="btn btn-warning">-</button></li>
-                                <li>cheval;Transport animalier à 4 pattes<button id="subWord10" class="btn btn-warning">-</button></li>                                
+                                <li>velo;Transport à 2 roues où il faut pédaler<button id="subWord1" class="btn btn-warning float-right">-</button></li>
+                                <li>trottinette;Transport à deux roues où il faut pousser avec le pied<button id="subWord2" class="btn btn-warning float-right">-</button></li>
+                                <li>moto;Transport à deux roues à moteur<button id="subWord3" class="btn btn-warning float-right">-</button></li>
+                                <li>voiture;Transport à 4 roues à moteur<button id="subWord4" class="btn btn-warning float-right">-</button></li>
+                                <li>bus;Transport en commun à 4 roues<button id="subWord5" class="btn btn-warning float-right">-</button></li>
+                                <li>avion;Transport volant<button id="subWord6" class="btn btn-warning float-right">-</button></li>
+                                <li>bateau;Transport marin<button id="subWord7" class="btn btn-warning float-right">-</button></li>
+                                <li>train;Transport ferrovière<button id="subWord8" class="btn btn-warning float-right">-</button></li>
+                                <li>fusee;Transport dans l'espace<button id="subWord9" class="btn btn-warning float-right">-</button></li>
+                                <li>cheval;Transport animalier à 4 pattes<button id="subWord10" class="btn btn-warning float-right">-</button></li>                                
                             </ol>
                         </div>
                         
