modif admin lineheight

--- a/asset/html/admin.html
+++ b/asset/html/admin.html
@@ -60,21 +60,21 @@
                         <div class="col-md-4 col-12 text-center order-md-2 order-4">Liste de niveau</div>
                         <div class="col-md-4 col-12 text-center order-md-3 order-7">Liste de mots</div>
                         <div class="col-md-4 col-12 order-md-5 order-2">
-                            <ol type="A" id="listTheme">
+                            <ol type="A" id="listTheme" class="cglh">
                                 <li class="col-12"><span class="text-success">Transports<button id="subTheme1" class="btn btn-warning float-right">-</button></li>
                                 <li class="col-12">Animaux</span><button id="subTheme2" class="btn btn-warning float-right">-</button></li>
                                 <li class="col-12">Sciences<button id="subTheme3" class="btn btn-warning float-right">-</button></li>
                             </ol>   
                         </div>
                         <div class="col-md-4 col-12 order-md-6 order-5">
-                            <ol type="I" id="listLevel">
-                                <li><span class="text-success">Niveau 1</span><button id="subLevel1" class="btn btn-warning float-right">-</button></li>
+                            <ol type="I" id="listLevel" class="cglh">
+                                <li height="200px"><span class="text-success">Niveau 1</span><button id="subLevel1" class="btn btn-warning float-right">-</button></li>
                                 <li>Niveau 2<button id="subLevel2" class="btn btn-warning float-right">-</button></li>
                                 <li>Niveau 3<button id="subLevel3" class="btn btn-warning float-right">-</button></li>
                             </ol>
                         </div>
                         <div class="col-md-4 col-12 order-md-7 order-8">
-                            <ol type="1" id="listWord">
+                            <ol type="1" id="listWord" class="cglh">
                                 <li>velo;Transport à 2 roues où il faut pédaler<button id="subWord1" class="btn btn-warning float-right">-</button></li>
                                 <li>trottinette;Transport à deux roues où il faut pousser avec le pied<button id="subWord2" class="btn btn-warning float-right">-</button></li>
                                 <li>moto;Transport à deux roues à moteur<button id="subWord3" class="btn btn-warning float-right">-</button></li>
