--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                       <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal" id="log_in" data-backdrop="false">Connexion</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="admin"  style="display:none;">Admin</a>
+                        <a class="nav-link" href="asset/html/admin2.html" id="admin"  style="display:none;">Admin</a>
                     </li>
                   <li class="nav-item welcome-link">
                       <p class="text-white welcome_nickname"><a href="asset/html/profil.html"><span id="welcomeNickname" style="display:none;"></span></a></p>
